--- a/Hillstate-Gwanggyosan/homebridge_config.json
+++ b/Hillstate-Gwanggyosan/homebridge_config.json
@@ -872,18 +872,18 @@
         {
             "accessory": "mqttthing",
             "type": "switch",
-            "name": "Elevator Call (MQTT)",
+            "name": "Elevator Call Downside (MQTT)",
             "url": "mosquitto broker url",
             "username": "mosquitto auth id",
             "password": "mosquitto auth password",
             "topics": {
                 "getOn": {
                     "topic": "home/hillstate/elevator/state",
-                    "apply": "return JSON.parse(message).state;"
+                    "apply": "return (JSON.parse(message).state == 6);"
                 },
                 "setOn": {
                     "topic": "home/hillstate/elevator/command",
-                    "apply": "return JSON.stringify({state: message});"
+                    "apply": "return JSON.stringify({state: 6});"
                 }
             },
             "integerValue": true,
@@ -901,7 +901,7 @@
             "topics": {
                 "getOccupancyDetected": {
                     "topic": "home/hillstate/elevator/state",
-                    "apply": "return JSON.parse(message).arrived;"
+                    "apply": "return (JSON.parse(message).state == 1);"
                 }
             },
             "integerValue": true,
